<?xml version="1.0"?>
<package>
  <name>dfg_kuri_drone</name>
  <version>1.0.0</version>
  <description>The dfg_kuri_drone package</description>

  <maintainer email="tarek.taha@gmail.com">Tarek Taha</maintainer>

  <license>LGPLv3</license>

  <author email="tarek.taha@gmail.com">Tarek Taha</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
